添加 GC 等内容